--- a/75-collect.html
+++ b/75-collect.html
@@ -93,11 +93,32 @@ Die Fotos sind Links zu deren Beschreibungsseiten. Dort gibt es dann auch noch m
 <center>
 <table width="850">
 <tr>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">DiskOnChip 2000 - 4MB</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">...</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">...</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">...</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">...</td>
+</tr>
+<tr>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">am8080a</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">m68k</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">z84000</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">6502</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">...</td>
+</tr>
+<tr>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">TI Logik der ersten Stunde</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">TI Logik der ersten Stunde</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">TI Logik der ersten Stunde</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">TI Logik der ersten Stunde</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">TI Logik der ersten Stunde</td>
+</tr>
+<tr>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">ST 486 DX2 (cyrix)</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">Pentium 133</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">Pentium MMX 200</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">AMD K6 300</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">AMD K6-2 266</td>
 </tr>
 <tr>
 	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
@@ -106,27 +127,37 @@ Die Fotos sind Links zu deren Beschreibungsseiten. Dort gibt es dann auch noch m
 	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
 	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
 </tr>
+</table>
+</center>
+<h1>TI Logik der ersten Stunde</h1>
+<h1>PC Prozessoren - von veraltet bis eher aktuell</h1>
+<h1>Spielekonsolen & Home-Computer</h1>
+<h1>CPUs und andere Chips</h1>
+<center>
+<table width="850">
 <tr>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">AMD</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">AMD</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">AMD</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">AMD</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">AMD</td>
 </tr>
 <tr>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">Intel</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">Intel</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">Intel</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">Intel</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">Intel</td>
 </tr>
 <tr>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
-	<td><img src="img/gallery_placeholder_small.png" alt="placeholder"></td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">AMD</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">AMD</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">AMD</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">AMD</td>
+	<td><img src="img/gallery_placeholder_small.png" alt="placeholder">AMD</td>
 </tr>
+
+
 </table>
 </center>
 </article>
