--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@ Mikrocontroller + Elektronik:<br>
 <a href="pc/logware_k6_cash_register.html"><strong>LogWare</strong> PC-Kasse mit <strong>AMD-K6</strong> / PC-based cash register</a><br>
 <a href="pc/winbond_extadp.html">WinBond <strong>Extension Adapter Mode</strong> (extadp) - <strong>ISA BUS on LPT</strong></a><br>
 <a href="pc/intel_al440lx.html"><b><strong>Intel AL440LX</strong></b> - Das erste Desktop Mainboard mit AGP</a><br>
-<a href="pc/asus_sp97v.html">Asus SP97-V USB-IR-PS2 Pinout falsch? Gar kein IR auf diesem Header? - Polyfuse gegrillt.</a><br>
-<a href="pc/drkaisers_pcwaechter_with_diskonchip.html">Dr. Kaiser's PC Waechter ISA Karte recycled - Träger für DiskOnChip</a><br>
-<a href="pc/isa_sound_16bit_in_8bit_slot.html">Manche 16Bit ISA Soundkarten arbeiten auch in 8Bit Slots...</a><br>
-<a href="pc/isel_isa_io.html">ISEL Automation ISA-IO-Karte</a><br>
-<a href="pc/logware_kio.html">LogWare KIO - Kombinations IO Karte - VGA (LVDS Display), LAN, Quad-UART, ?HD44780?</a><br>
+<a href="pc/asus_sp97v.html"><strong>Asus SP97-V USB-IR-PS2 Pinout falsch?</strong> Gar kein IR auf diesem Header? - Polyfuse gegrillt.</a><br>
+<a href="pc/drkaisers_pcwaechter_with_diskonchip.html"><strong>Dr. Kaiser's PC Waechter</strong> ISA Karte recycled - <strong>Träger für DiskOnChip</strong></a><br>
+<a href="pc/isa_sound_16bit_in_8bit_slot.html">Manche <strong>16Bit ISA Soundkarten</strong> arbeiten auch <strong>in 8Bit Slots</strong>...</a><br>
+<a href="pc/isel_isa_io.html"><strong>ISEL Automation ISA-IO-Karte</strong></a><br>
+<a href="pc/logware_kio.html"><strong>LogWare KIO</strong> - Kombinations IO Karte - <strong>VGA</strong> (LVDS Display), <strong>LAN</strong>, <strong>Quad-UART</strong>, ?HD44780?</a><br>
 <br>Manches ist in englisch, manches in deutsch. Das Ziel ist aber, dass ich irgendwann alles zweisprachig hier habe...
 <br><br>
 
