--- a/pc/logware_kio.html
+++ b/pc/logware_kio.html
@@ -74,7 +74,7 @@ Nach aussen sind auf dem Board 2x SUB-D9 und 1x SUB-D25. Nach innen gehen drei F
 <br><br>
 <h1>VGA / Grafikkarte</h1>
 Chipsatz: CHIPS F65545 B2<br>
-RAM: ___kB<br>
+RAM: 1024kB (2x 256kx16)<br>
 Interface zum PC: 16Bit ISA, zum Display: LVDS<br>
 VGA BIOS: "Universal VESA VBE 6.5", ___kB<br><br>
 Das verbaute Display unterstützt nur 800x600 bei 16 Farben. Andere Video-Modes werden in der Anzahl der Farben begrenzt
@@ -82,7 +82,13 @@ und nur in einem Ausschnitt des Displays dargestellt.<br>
 <a href="">Foto 640x480x4 Windows 3.1</a><br>
 <a href="">Foto 80x25 Text BIOS</a><br>
 <a href="">Foto 800x600x4 Testprogramm von mir (DOS)</a><br>
-Leider hat die Displaybeleuchtung auf diesen Fotos immernoch eine Macke. Ich muss diese, denke ich, ersetzen.
+Leider hat die Displaybeleuchtung auf diesen Fotos immernoch eine Macke. Ich muss diese, denke ich, ersetzen.<br>
+<br>
+Rechts vom Display-Chip befindet sich eine 10-polige Stiftleiste. Diese ist für einen SUB-D 15 VGA Stecker um
+einen normalen Bildschirm anzuschliessen. Im "Slotblech" befindet sich auch eine Aussparung für so einen Stecker.
+<br>
+<img src="../img/kio/logware_kio_vga_pinout.jpg" alt="logware kio vga pinout"><br>
+<img src="../img/kio/logware_kio_vga_circuit.png" alt="logware kio vga pinout">
 <br><br>
 <h1>LAN</h1>
 Die Netzwerkkarte ist eine SMSC91C94 und funktioniert tadellos mit dem Linux-Treiber. Die IO, IRQ und Memory Einstellungen dürften gängige sein, da der Linux-Treiber die Karte, ohne Konfiguration, auf Anhieb findet.<br><br>
