--- a/index.html
+++ b/index.html
@@ -9,16 +9,6 @@
 </head>
 <body>
 
-<!--
-Skiplinks
-Mit der Tabtaste Inhalte anspringen.
--->
-<ul id="skiplinks">
-  <li><a href="#navigation">Zum Hauptmenü</a></li>
-  <li><a href="#search">Zur Suche</a></li>
-  <li><a href="#main">Zum Inhalt</a></li>
-</ul><!-- skiplinks ends -->
-
 
 <header>
   <hgroup lang="en">
@@ -65,20 +55,30 @@ Der eigentliche Inhalt der Seite
 -->
 <article id="main"><br>
 Da ich nicht weiss, was sich gut als Einleitung auf der Startseite macht, kommt hier erstmal nur eine Liste mit Inhalten:<br><br>
-Mikrocontroller + Elektronik:<br>
+<strong>Mikrocontroller + Elektronik:</strong><br>
 <a href="saa1064.html"><strong>SAA1064</strong> 7 Segment Treiber + Linux</a><br>
 <a href="sid_clock.html"><strong>SID-Clock</strong> - LED-Dot-Matrix Uhr mit STM32 "BluePill"</a><br>
+<a href=""><strong>SID <-> AVR</strong> 6581 SID an einem AVR Microcontroller</a><br>
+<a href=""><strong>SID <-> ARM (STM32)</strong> 6581 SID an einem STM32 Microcontroller</a><br>
 
-<br>PC:<br>
+<br><strong>PC - Mainboards</strong><br>
 <a href="pc/sbc_ap40ahd.html">PC104 <strong>SBC AP40AHD</strong> mit Am5x86/133MHz</a><br>
-<a href="pc/logware_k6_cash_register.html"><strong>LogWare</strong> PC-Kasse mit <strong>AMD-K6</strong> / PC-based cash register</a><br>
-<a href="pc/winbond_extadp.html">WinBond <strong>Extension Adapter Mode</strong> (extadp) - <strong>ISA BUS on LPT</strong></a><br>
 <a href="pc/intel_al440lx.html"><b><strong>Intel AL440LX</strong></b> - Das erste Desktop Mainboard mit AGP</a><br>
 <a href="pc/asus_sp97v.html"><strong>Asus SP97-V USB-IR-PS2 Pinout falsch?</strong> Gar kein IR auf diesem Header? - Polyfuse gegrillt.</a><br>
+
+<br><strong>PC - IO (digital/analog)</strong><br>
+<a href="pc/winbond_extadp.html">WinBond <strong>Extension Adapter Mode</strong> (extadp) - <strong>ISA BUS on LPT</strong></a><br>
+<a href="pc/isel_isa_io.html"><strong>ISEL Automation ISA-IO-Karte</strong></a><br>
+
+<br><strong>PC - ISA Stuff</strong><br>
 <a href="pc/drkaisers_pcwaechter_with_diskonchip.html"><strong>Dr. Kaiser's PC Waechter</strong> ISA Karte recycled - <strong>Träger für DiskOnChip</strong></a><br>
 <a href="pc/isa_sound_16bit_in_8bit_slot.html">Manche <strong>16Bit ISA Soundkarten</strong> arbeiten auch <strong>in 8Bit Slots</strong>...</a><br>
-<a href="pc/isel_isa_io.html"><strong>ISEL Automation ISA-IO-Karte</strong></a><br>
-<a href="pc/logware_kio.html"><strong>LogWare KIO</strong> - Kombinations IO Karte - <strong>VGA</strong> (LVDS Display), <strong>LAN</strong>, <strong>Quad-UART</strong>, ?HD44780?</a><br>
+
+<br><strong>PC - Kassensysteme</strong><br>
+<a href="pc/logware_k6_cash_register.html"><strong>LogWare</strong> PC-Kasse mit <strong>AMD-K6</strong> / PC-based cash register</a><br>
+<a href="pc/logware_kio.html"><strong>LogWare KIO</strong> - Kombinations IO Karte - <strong>VGA</strong> (LVDS Display), <strong>LAN</strong>, <strong>Quad-UART</strong>, HD44780</a><br>
+
+
 <br>Manches ist in englisch, manches in deutsch. Das Ziel ist aber, dass ich irgendwann alles zweisprachig hier habe...
 <br><br>
 
