dvd player drive in a pc

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@ Da ich nicht weiss, was sich gut als Einleitung auf der Startseite macht, kommt 
 <a href="pc/intel_al440lx.html"><b><strong>Intel AL440LX</strong></b> - Das erste Desktop Mainboard mit AGP</a><br>
 <a href="pc/asus_sp97v.html"><strong>Asus SP97-V USB-IR-PS2 Pinout falsch?</strong> Gar kein IR auf diesem Header? - Polyfuse gegrillt.</a><br>
 
+<br><strong>PC - Basteleien</strong><br>
+<a href="pc/dvd_player_drive_in_a_pc.html">DVD-Player Laufwerke in einen PC stecken</a><br>
+
 <br><strong>PC - IO (digital/analog)</strong><br>
 <a href="pc/winbond_extadp.html">WinBond <strong>Extension Adapter Mode</strong> (extadp) - <strong>ISA BUS on LPT</strong></a><br>
 <a href="pc/isel_isa_io.html"><strong>ISEL Automation ISA-IO-Karte</strong></a><br>
