--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ Da ich nicht weiss, was sich gut als Einleitung auf der Startseite macht, kommt 
 
 <br><strong>PC - IO (digital/analog)</strong><br>
 <a href="pc/winbond_extadp.html">WinBond <strong>Extension Adapter Mode</strong> (extadp) - <strong>ISA BUS on LPT</strong></a><br>
+<a href="sdram_i2c_adapter.html"><strong>SDRAM I²C Interface</strong> - I²C Bus an jedem PC mit SDRAM.<br>
 <a href="pc/isel_isa_io.html"><strong>ISEL Automation ISA-IO-Karte</strong></a><br>
 
 <br><strong>PC - ISA Stuff</strong><br>
