added x86pong page

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@ Da ich nicht weiss, was sich gut als Einleitung auf der Startseite macht, kommt 
 <a href=""><strong>SID <-> AVR</strong> 6581 SID an einem AVR Microcontroller</a><br>
 <a href=""><strong>SID <-> ARM (STM32)</strong> 6581 SID an einem STM32 Microcontroller</a><br>
 
+<br><strong>x86pong DOS-/Bare-Metal-Spiel</strong><br>
+<a href="x86pong.html">Ein Pong-Spiel für DOS oder aber auch ohne Betriebssystem</a><br>
+
 <br><strong>PC - Mainboards</strong><br>
 <a href="pc/sbc_ap40ahd.html">PC104 <strong>SBC AP40AHD</strong> mit Am5x86/133MHz</a><br>
 <a href="pc/intel_al440lx.html"><b><strong>Intel AL440LX</strong></b> - Das erste Desktop Mainboard mit AGP</a><br>
