--- a/15-displays.html
+++ b/15-displays.html
@@ -25,11 +25,10 @@ aside (1. Sidebar mit dem Hauptmenu)
   <nav id="navigation">
   <ul>
     <li><a href="index.html">Startseite</a></li>
-    <li><a href="01-elektronik.html">Elektronik</a></li>
-    <li><a href="05-mikrocontroller.html">Mikrocontroller</a></li>
+    <li><a href="01-eluc.html">Elektronik + µC</a></li>
     <li><a href="15-displays.html">Displays</a></li>
     <li><a href="35-linux.html">Linux</a></li>
-    <li><a href="50-pc.html">PC</a></li>
+    <li><a href="50-pc.html">PC + DOS</a></li>
     <li><a href="75-collect.html">Sammlung</a></li>
     <li><a href="99-about.html">Kontakt</a></li>
   </ul>
