--- a/index.html
+++ b/index.html
@@ -61,8 +61,14 @@ Da ich nicht weiss, was sich gut als Einleitung auf der Startseite macht, kommt 
 <a href=""><strong>SID <-> AVR</strong> 6581 SID an einem AVR Microcontroller</a><br>
 <a href=""><strong>SID <-> ARM (STM32)</strong> 6581 SID an einem STM32 Microcontroller</a><br>
 
+<br><strong>AVR32 Linux</strong><br>
+<a href="grasshopper_i2c_quickstart.html">Grasshopper I²C Quickstart</a><br>
+
 <br><strong>x86pong DOS-/Bare-Metal-Spiel</strong><br>
 <a href="x86pong.html">Ein Pong-Spiel für DOS oder aber auch ohne Betriebssystem</a><br>
+
+<br><strong>PC - Linux</strong><br>
+<a href="write-only-memory.html">Ein Kernel-Treiber für <strong>Write Only Memory</strong>-Chips</a>, alle Typen unterstützt.<br>
 
 <br><strong>PC - Mainboards</strong><br>
 <a href="pc/sbc_ap40ahd.html">PC104 <strong>SBC AP40AHD</strong> mit Am5x86/133MHz</a><br>
