--- a/grasshopper_i2c_quickstart.html
+++ b/grasshopper_i2c_quickstart.html
@@ -69,13 +69,17 @@ $ modprobe i2c-dev
 
 Nun kann man nachsehen, ob das I²C-/dev-Gerät erstellt worden ist:<br>
 <br>
+<pre>
 $ ls -al /dev/i2c*
 crw-r--r--    1 root     root      89,   0 Dec 31  2006 /dev/i2c-0
-Sollte dabei nicht herauskommen, kann man die Device-Node von Hand anlegen:
+</pre>
+Sollte dabei nichts herauskommen, kann man die Device-Node von Hand anlegen:
 
+<pre>
 $ mknod /dev/i2c-0 89 0 b
+</pre>
 Nun kann man z.B. so den Bus durchsuchen lassen:
-
+<pre>
 $ ./i2cdetect -y -r 0
      0  1  2  3  4  5  6  7  8  9  a  b  c  d  e  f
 00:          -- -- -- -- -- -- -- -- -- -- -- -- -- 
@@ -86,11 +90,12 @@ $ ./i2cdetect -y -r 0
 50: -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 
 60: -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- 
 70: -- -- -- -- -- -- -- --
+</pre>
 Bei mir sind zu dem Zeitpunkt die Adressen $28 und $44 belegt gewesen, ein MAX127 AD-Wandler und ein MAX6956 20-Port LED Treiber/IO-Expander.
 i2cdetect ist ein Teil von i2ctools und leider nicht von Haus aus auf dem Board. Ich habe es übersetzt, eingetütet und ihr könnt es hier herunterladen. Auf dem Board entpacken und ausführen.
 
 Um die Treiber und die Device-Node automatisch laden und anlegen zu lassen, muss man den „autostart“ des Board ein wenig bearbeiten:
-
+<pre>
 $ vi /etc/rc.d/S50i2c.sh
 „i“ drücken (starten des eingabe modus)
 
@@ -114,6 +119,7 @@ return 0
 :wq tippen (beenden von vi und speichern)
 
 $ chmod +x /etc/rc.d/S50i2c
+</pre>
 Ab jetzt wird bei jedem Neustart der Treiber automatisch richtig geladen.
 
 </article>
